文章の校正と表示ズレの改善

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <li>
         <img src="img/html5-css3.png" alt="HTML">
         <div>
-          <h2>HTML</h2>
+          <h2>HTML/CSS</h2>
           <p>Webサイトを0から構築する為のHTML、CSSの使用が可能です。<br>
             現在使用しているエディタはVisual Studio Codeです。</p>
         </div>
@@ -118,9 +118,7 @@
 
   <section class="contact">
     <h1 id="contact">CONTACT</h1>
-    <p>mail : <a href="">
-      shibawanko0202@gmail.com
-    </a></p>
+    <p>mail : shibawanko0202@gmail.com</p>
     <a href="https://www.instagram.com/shibawanko0202/"><i class="bi bi-instagram"></i></a>
   </section>
 
