自己紹介の加筆と余白の修正

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>柴田のポートフォリオサイト</title>
+  <title>shibata.portfolio</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/pen.png">
@@ -38,7 +38,9 @@
     <h1>ABOUT</h1>
     <p>1989年生まれ<br>
     長崎県五島列島育ち<br>
-    半導体製造業務を15年経験し、転職活動中<br>
+    自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
+    その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。<br>
+    現在はwebサイト製作に携わりたいと考え勉強、転職活動中です。<br>
     愛知県名古屋市在住</p>
   </section>
 
