自動スクロールをsmoothへ変更

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
     その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。<br>
     現在はwebサイト製作に携わりたいと考え勉強、転職活動中です。<br>
+    趣味 : 読書/映画観賞/カメラ<br>
     愛知県名古屋市在住</p>
   </section>
 
