--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@
     現在はwebサイト製作に携わりたいと考え勉強、転職活動中です。<br>
     趣味 : 読書/映画観賞/カメラ<br>
     愛知県名古屋市在住</p>
+    <details>
+      <summary>何故、今さら転職したいのですか</summary>
+      <div class="answer">
+        <p>1.現職での成長に限界を感じた<br>
+          2.成長を実感したいと感じた<br>
+          3.</p>
+      </div>
+    </details>
+    <details>
+      <summary>何故、webデザイナーなのですか</summary>
+      <div class="answer">
+        <p>美しいものが好きであることと、世の中がもっと美しくなって欲しいと思うからです。</p>
+      </div>
+    </details>
+    <details>
+      <summary>好きな映画はなんですか</summary>
+      <div class="answer">
+        <p>トイストーリー3/ダイ・ハード</p>
+      </div>
+    </details>
   </section>
 
   <section class="skill">
