Q&Aの加筆修正

--- a/index.html
+++ b/index.html
@@ -53,20 +53,21 @@
       <summary>何故、今さら転職したいのですか</summary>
       <div class="answer">
         <p>1.現職での成長に限界を感じた<br>
-          2.成長を実感したいと感じた<br>
-          3.</p>
+          2.モノづくりに関わりたいと考えた<br>
+          3.プライベートの活動に一区切りがついた<br>
+        などの複合的な理由です。</p>
       </div>
     </details>
     <details>
       <summary>何故、webデザイナーなのですか</summary>
       <div class="answer">
-        <p>美しいものが好きであることと、世の中がもっと美しくなって欲しいと思うからです。</p>
+        <p>モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からwebデザイナーを志望しています。</p>
       </div>
     </details>
     <details>
       <summary>好きな映画はなんですか</summary>
       <div class="answer">
-        <p>トイストーリー3/ダイ・ハード</p>
+        <p>トイストーリー3/ダイ・ハード/LIFE! などです。</p>
       </div>
     </details>
   </section>
