--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     趣味 : 読書/映画観賞/カメラ<br>
     愛知県名古屋市在住</p>
     <details>
-      <summary>何故、今さら転職したいのですか</summary>
+      <summary>なぜ、今さら転職したいのですか</summary>
       <div class="answer">
         <p>1.現職での成長に限界を感じた<br>
           2.モノづくりに関わりたいと考えた<br>
@@ -59,7 +59,7 @@
       </div>
     </details>
     <details>
-      <summary>何故、webデザイナーなのですか</summary>
+      <summary>webデザイナーを志望する理由は何ですか</summary>
       <div class="answer">
         <p>モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からwebデザイナーを志望しています。</p>
       </div>
@@ -126,15 +126,15 @@
     </h1>
     <ul>
       <li>
-        <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
-          <h2>吉岡里帆のコピーサイト</h2>
-          <p>吉岡里帆さんのHPの模写サイトです。</p>
+        <a href="https://shibawanko0202.github.io/typing/">
+          <h2>typing</h2>
+          <p>タイピング練習ソフトです。</p>
         </a>
       </li>
       <li>
-        <a href="">
-          <h2>工事中１</h2>
-          <p>工事中です。</p>
+        <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
+          <h2>吉岡里帆のコピーサイト</h2>
+          <p>吉岡里帆さんのHPの模写サイトです。</p>
         </a>
       </li>
       <li>
