パスの修正

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     </h1>
     <ul>
       <li>
-        <a href="https://shibawanko0202.github.io/typing/">
-          <h2>typing</h2>
+        <a href="https://shibawanko0202.github.io/infinityTyping/">
+          <h2>typing!</h2>
           <p>タイピング練習ソフトです。</p>
         </a>
       </li>
