--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/pen.png">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RVQWQCVVL0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RVQWQCVVL0');
+</script>
 </head>
 <body>
   
@@ -125,29 +134,37 @@
       WORKS
     </h1>
     <ul>
-      <li>
-        <a href="https://shibawanko0202.github.io/infinityTyping/">
+      <li class="work_list">
+        <a href="https://shibawanko0202.github.io/speedTyping/">
+          <img src="img/speedtyping.jpg" alt="タイピングソフト">
+        </a>
+        <div>
           <h2>typing!</h2>
-          <p>タイピング練習ソフトです。</p>
-        </a>
+          <p>タイピング練習ゲームです。<br>
+          html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。<br>
+          また、苦手なキーが一目で分かるようjavascriptで動きを付けました。</p>
+        </div>
       </li>
-      <li>
+      <li class="work_list">
         <a href="https://shibawanko0202.github.io/copy_yosioka_riho/">
-          <h2>吉岡里帆のコピーサイト</h2>
-          <p>吉岡里帆さんのHPの模写サイトです。</p>
+          <img src="img/yoshiokariho_copy.jpg" alt="吉岡里帆さんのコピーサイト">
         </a>
+          <h2>吉岡里帆/コピーサイト</h2>
+          <p>吉岡里帆さんのHPの模写サイトです。</p>
       </li>
-      <li>
+      <li class="work_list">
         <a href="">
+          <img src="img/sample.jpg" alt="">
+        </a>
           <h2>工事中２</h2>
           <p>工事中です。</p>
-        </a>
       </li>
-      <li>
+      <li class="work_list">
         <a href="">
+          <img src="img/sample.jpg" alt="">
+        </a>
           <h2>工事中３</h2>
           <p>工事中です。</p>
-        </a>
       </li>
     </ul>
   </section>
