--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/pen.png">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RVQWQCVVL0"></script>
-<script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-RVQWQCVVL0"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-RVQWQCVVL0');
 </script>
 </head>
@@ -26,9 +25,14 @@
     <a href="#">
       <h1 id="title">shibata.portfolio</h1>
     </a>
-    <a href="https://www.instagram.com/shibawanko0202/">
-      <i class="bi bi-instagram"></i>
-    </a>
+    <div>
+      <a href="https://github.com/shibawanko0202">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="https://www.instagram.com/shibawanko0202/">
+        <i class="bi bi-instagram"></i>
+      </a>
+    </div>
   </header>
   
   <section class="hero">
@@ -52,10 +56,10 @@
       ABOUT
     </h1>
     <p>1989年生まれ<br>
-    長崎県五島列島育ち<br>
-    自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。<br>
+    長崎県五島列島出身<br>
+    自動車メーカーで半導体製造業務を15年経験し、現在も同社に務めています。
     その傍らで、業務で出来ない経験をするためにボランティア活動等(ゴミ拾い、イベント運営、水族館の解説、友人の結婚式二次会幹事など)を行っていました。<br>
-    現在はwebサイト製作に携わりたいと考え勉強、転職活動中です。<br>
+    現在はweb製作に携わりたいと考え独学で勉強、転職活動中です。<br>
     趣味 : 読書/映画観賞/カメラ<br>
     愛知県名古屋市在住</p>
     <details>
@@ -68,15 +72,9 @@
       </div>
     </details>
     <details>
-      <summary>webデザイナーを志望する理由は何ですか</summary>
+      <summary>web制作を志望する理由は何ですか</summary>
       <div class="answer">
-        <p>モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からwebデザイナーを志望しています。</p>
-      </div>
-    </details>
-    <details>
-      <summary>好きな映画はなんですか</summary>
-      <div class="answer">
-        <p>トイストーリー3/ダイ・ハード/LIFE! などです。</p>
+        <p>モノづくりやデザインの美しさ、合理性が好きな事と、PCが好きな事からweb制作を志望しています。</p>
       </div>
     </details>
   </section>
@@ -135,13 +133,20 @@
     </h1>
     <ul>
       <li class="work_list">
+        <a href="https://shibawanko0202.github.io/sokudokubunko/">
+          <img src="img/sokudokubunko.jpg" alt="速読アプリ">
+        </a>
+          <h2>速読強要文庫</h2>
+          <p>人間が文章を読む際にもっとも時間をかけている視線の移動を無くすことで、速読が出来るようにしたwebアプリです。10日</p>
+      </li>
+      <li class="work_list">
         <a href="https://shibawanko0202.github.io/speedTyping/">
-          <img src="img/speedtyping.jpg" alt="タイピングソフト">
+          <img src="img/typing!(speed).jpg" alt="タイピングソフト">
         </a>
         <div>
           <h2>typing!</h2>
-          <p>タイピング練習ゲームです。<br>
-          html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。<br>
+          <p>タイピング練習ゲームです。
+          html/css/javascriptで頻出する用語を練習でき、リアルタイムでタイピング精度を見ることができます。
           また、苦手なキーが一目で分かるようjavascriptで動きを付けました。</p>
         </div>
       </li>
@@ -151,13 +156,6 @@
         </a>
           <h2>吉岡里帆/コピーサイト</h2>
           <p>吉岡里帆さんのHPの模写サイトです。</p>
-      </li>
-      <li class="work_list">
-        <a href="">
-          <img src="img/sample.jpg" alt="">
-        </a>
-          <h2>工事中２</h2>
-          <p>工事中です。</p>
       </li>
       <li class="work_list">
         <a href="">
@@ -175,11 +173,16 @@
       CONTACT
     </h1>
     <p>mail : shibawanko0202@gmail.com</p>
-    <a href="https://www.instagram.com/shibawanko0202/"><i class="bi bi-instagram"></i></a>
+    <a href="https://github.com/shibawanko0202">
+      <i class="bi bi-github"></i>
+    </a>
+    <a href="https://www.instagram.com/shibawanko0202/">
+      <i class="bi bi-instagram"></i>
+    </a>
   </section>
 
   <footer>
-    <small>(c) 2022 shibata</small>
+    <small>&copy; 2022 shibata</small>
   </footer>
 
   <a  id="top" class="top" href="#">
