worksのレイアウト修正

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             <dd>人間が文章を読む際にもっとも時間をかけている視線の移動を無くすことで、速読が出来るようにしたwebアプリです。</dd>
             <dt>工数</dt>
             <dd>10日</dd>
-            <dt>苦労した点</dt>
+            <dt>こだわりポイント</dt>
+            <dd>文庫本(古本)のような見た目とアニメーション、難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。</dd>
+            <dt>苦労した点とその対策</dt>
             <dd>文庫本の様な見た目とUIにしたくて、本をめくるようなアニメーションにするのに苦労しました。</dd>
             <dt>今後の課題</dt>
             <dd>現在は手入力で文章を配列に変換している為、形態素解析ソフトを使用して自動変換出来るようにしたい。</dd>
@@ -162,7 +164,9 @@
               また、苦手なキーが一目で分かるようjavascriptで動きを付けました。</dd>
             <dt>工数</dt>
             <dd>14日</dd>
-            <dt>苦労した点</dt>
+            <dt>こだわりポイント</dt>
+            <dd>気持のいいUIを目指してアニメーションを実装しました。</dd>
+            <dt>苦労した点とその対策</dt>
             <dd>ミスした際のバルーンが問題文に被って出現する問題。中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに出現するようにしました。</dd>
             <dt>今後の課題</dt>
             <dd>問題(単語)の追加。日本語ver。</dd>
@@ -179,7 +183,9 @@
             <dd>「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。数文字の英単語でも滅茶苦茶時間がかかることが分かります。</dd>
             <dt>工数</dt>
             <dd>10日</dd>
-            <dt>苦労した点</dt>
+            <dt>こだわりポイント</dt>
+            <dd>機能としてはシンプルなものなので、今回はメディアクエリを使わないでレスポンシブ対応してみた。</dd>
+            <dt>苦労した点とその対策</dt>
             <dd>打鍵した文字数が2万字程度からsetIntervalの速度が落ちる為、必要以上に時間がかかる。現在は一定数を越えると文字を初期化して速度を維持しています。</dd>
             <dt>今後の課題</dt>
             <dd>日本語への対応。</dd>
@@ -195,8 +201,10 @@
             <dd>吉岡里帆さんのHPの模写サイトです。</dd>
             <dt>工数</dt>
             <dd>1日</dd>
-            <dt>苦労した点</dt>
-            <dd>可愛すぎる</dd>
+            <dt>こだわりポイント</dt>
+            <dd>可愛い</dd>
+            <dt>苦労した点とその対策</dt>
+            <dd>可愛すぎる為、ラジオを聴くことにした。</dd>
             <dt>今後の課題</dt>
             <dd>どうやって付き合うか</dd>
           </dl>
