worksの文章の校正

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
             <dt>こだわりポイント</dt>
             <dd>文庫本(古本)のような見た目とアニメーション、難しい言葉が多いのでホバーで意味や読みを表示できるようにしました。</dd>
             <dt>苦労した点とその対策</dt>
-            <dd>文庫本の様な見た目とUIにしたくて、本をめくるようなアニメーションにするのに苦労しました。</dd>
+            <dd>青空文庫(著作権の消滅した作品を載せているwebサイト)から作品を選ぶのに悩みました。本当は冒頭が有名な「雪国」も掲載したかったのですが、ギリギリ著作権が残っていました。残念。</dd>
             <dt>今後の課題</dt>
-            <dd>現在は手入力で文章を配列に変換している為、形態素解析ソフトを使用して自動変換出来るようにしたい。</dd>
+            <dd>現在は手入力で文章を配列に変換している為、形態素解析ソフト(kuromoji.jsなど)を使用して自動変換出来るようにしたいと考えています。</dd>
           </dl>
       </li>
       <li class="work_list">
@@ -165,9 +165,9 @@
             <dt>工数</dt>
             <dd>14日</dd>
             <dt>こだわりポイント</dt>
-            <dd>気持のいいUIを目指してアニメーションを実装しました。</dd>
+            <dd>気持のいいUIを目指してアニメーションを実装しました。ミスした際に現れるバルーンはクリックで割ることもできます。</dd>
             <dt>苦労した点とその対策</dt>
-            <dd>ミスした際のバルーンが問題文に被って出現する問題。中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに出現するようにしました。</dd>
+            <dd>ミスしたキーのバルーンの出現がランダムな為、問題文に被って出現する事もありました。その対策として中心部分のみ除外する為に画面を4分割してランダムに選び、その中から更にランダムに出現するようにしました。</dd>
             <dt>今後の課題</dt>
             <dd>問題(単語)の追加。日本語ver。</dd>
           </dl>
@@ -180,13 +180,15 @@
           <h2>無限の猿実験場</h2>
           <dl>
             <dt>概要</dt>
-            <dd>「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。数文字の英単語でも滅茶苦茶時間がかかることが分かります。</dd>
+            <dd>「無限の時間があれば、猿が無作為にキーボードを叩き続けれるといずれシェイクスピアの戯曲が完成する」という『無限の猿定理』の実証実験用アプリです。数文字の英単語でも滅茶苦茶時間がかかることが分かります。
+              「apple」は(幸運にも)6時間程度で完成しました。
+            </dd>
             <dt>工数</dt>
             <dd>10日</dd>
             <dt>こだわりポイント</dt>
-            <dd>機能としてはシンプルなものなので、今回はメディアクエリを使わないでレスポンシブ対応してみた。</dd>
+            <dd>機能としてはシンプルなものなので、今回はメディアクエリを使わないでレスポンシブ対応してみました。</dd>
             <dt>苦労した点とその対策</dt>
-            <dd>打鍵した文字数が2万字程度からsetIntervalの速度が落ちる為、必要以上に時間がかかる。現在は一定数を越えると文字を初期化して速度を維持しています。</dd>
+            <dd>打鍵した文字数が2万字程度からsetIntervalの速度が落ちる為、必要以上に時間がかかるので、現在は一定数を越えると文字を初期化して速度を維持しています。</dd>
             <dt>今後の課題</dt>
             <dd>日本語への対応。</dd>
           </dl>
