レイアウトの調整

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   
   <div id="target"></div>
 
+  <div class="top-right"></div>
+  <div class="bottom-left"></div>
+
   <header>
     <a href="#">
       <h1 id="header__title">
@@ -54,21 +57,37 @@
   </header>
   
   <section class="hero">
-    <div class="bgi">
-      <div class="rgb">
+    <div class="hero__himawari">
+      <div class="hero__gradient">
         <nav>
-          <ul>
+          <ul class="hero__lists">
             <li class="hero__list">
-              <a href="#about">ABOUT</a>
+              <a href="#about">
+                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <div>ABOUT</div>
+              </a>
             </li>
             <li class="hero__list">
-              <a href="#skill">SKILL</a>
+              <a href="#skill">
+                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <div>SKILL</div>
+              </a>
             </li>
             <li class="hero__list">
-              <a href="#work">WORKS</a>
+              <a href="#work">
+                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <div>WORKS</div>
+              </a>
             </li>
             <li class="hero__list">
-              <a href="#contact">CONTACT</a>
+              <a href="#contact">
+                <img src="img/フレーム(無印).png" alt="" class="hero__list-frame">
+                <img src="img/フレーム(ホバー).png" alt="" class="hero__list-frame hero__list-frame-hover">
+                <div>CONTACT</div>
+              </a>
             </li>
           </ul>
         </nav>
