ヘッダーのレスポンシブ調整

--- a/index.html
+++ b/index.html
@@ -160,14 +160,17 @@
         <img src="img/ps@2x.png" alt="Photoshop">
         <div>
           <h2>Photoshop</h2>
-          <p>趣味で写真加工をしている為、画像の加工や補正などの編集が可能です。</p>
+          <p>
+            趣味で写真加工をしている為、画像の加工や補正などの編集が可能です。<br>
+            このサイトのロゴタイプもPhotoshopで制作しました。
+          </p>
         </div>
       </li>
       <li class="sk">
         <img src="img/responsive.png" alt="responsivedesign">
         <div>
           <h2>Responsive</h2>
-          <p>様々なデバイスからアクセスした際に、最適な表示となるようにWebサイトを製作出来ます。</p>
+          <p>様々なデバイスからアクセスした際に、最適な表示となるようにWebサイトを制作出来ます。</p>
         </div>
       </li>
       <li class="sk">
@@ -175,7 +178,7 @@
         <div>
           <h2>Photo/Movie</h2>
           <p>写真撮影を趣味としている為、簡単なレタッチが可能です。<br>
-            また、友人の結婚式用の動画製作を何度か経験しており、納期を意識した動画編集も可能です。</p>
+            また、友人の結婚式用の動画制作を何度か経験しており、納期を意識した動画編集も可能です。</p>
         </div>
       </li>
     </ul>
